[package]
name = "substitution_model"
version = "0.1.0"
authors = ["PoorlyDefinedBehaviour <brunotj2015@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
lalrpop = "0.19.6"

[dependencies]
lalrpop-util = "0.19.6"
regex = "1"

[dev-dependencies]
cargo-watch = "7.7.0"

